# orthogoval

./: AUTHORS  Makefile.am  Makefile.in  README.md  aclocal.m4  autoreconf.output  configure.ac
affine/even_order/: makefile  massif.4.out  massif.8.out
affine/even_order/src/implementation/: ag.c++  matrix.c++  mutually_orthogoval.c  raw_search.c++  raw_search6.c++  transversal.c++
affine/even_order/src/interface/: ag.h  main.h  matrix.h
affine/even_order/var/: Blocks.ipynb  convert.sh  defs.sh  sp.sh
affine/even_order/var/lift/: Untitled.ipynb  spread.4.txt  spread.8.txt
affine/even_order/var/ord16/: gl.16.txt  go.16+.txt
affine/even_order/var/ord4/: generators.4.txt  maximum.4.txt  vertices.4.txt
affine/even_order/var/ord8/: all_cliques.8.txt  spread.8.txt  vertices.8.txt
affine/odd_order/: makefile
affine/odd_order/src/implementation/: ag.c++  matrix.c++  mutually_orthogoval.c  transversal.c++
affine/odd_order/src/interface/: ag.h  main.h  matrix.h
affine/odd_order/src/interface/cliquer-1.21/: cliquerconf.h  set.h
affine/odd_order/var/: Blocks.ipynb  generators.sh
affine/odd_order/var/ord9/: generators.9.txt  spread.9.txt
data/: Untitled.ipynb  canonical_spread.sh  cost.sh  fullaut.sh  plot.py  plot_32.py  plot_64.py  spread_basis.sh  tmp.sh  togap.sh  tomathematica.sh
data/ord16/: spread_basis.16.txt
data/ord32/: canonical_spread.32.txt  spread_basis.32.txt
data/ord4/: all_cliques.4.txt  canonical_spread.4.txt  spread_basis.4.txt  vertices.4.txt
data/ord64/: canonical_spread.64.txt
data/ord8/: canonical_spread.8.txt  spread_basis.8.txt
doc/: Makefile.am  orthogoval.info  orthogoval.texi
m4/: gnulib-cache.m4
notes/: orthogoval_notes.tex
notes/auto/: orthogoval_notes.el
src/: ag.cpp  ag.h  automorphisms.cpp  config.h.in  config.h.in~  feasible_coverings.c  feasible_coverings_cost.c  feasible_subspaces.cpp  feasible_subspaces_imp.cpp  libspread.h  matrix.cpp  matrix.h  mutually_orthogoval.c  raw_search.cpp  solution.h  space.h  transversal.cpp
var/: Blocks.ipynb  gl.sh  go.sh
var/ord16/: sp.gens.16.txt  spread.16.txt
var/ord8/: generators.8.txt
